# Searcher

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  pyproject.toml  service.py
backend/searcher/: config.py  embedder.py  hybrid_searcher.py  init_collection_crunchbase.py  init_collection_startup.py  neural_searcher.py  service.py  text_searcher.py
frontend/: .env  Dockerfile
frontend/src/api/: search.ts
frontend/src/components/CustomHeader/: index.tsx
frontend/src/components/MainSection/: index.tsx
frontend/src/hooks/: useGetSearchResult.ts  useMountedRef.ts  useMountedState.ts
