[tool.poetry]
name = "Searcher"
version = "0.0.3"
description = "Qdrant vector similarity engine demo"
authors = ["Andrey Vasnetsov <andrey@vasnetsov.com>",
           "Chamath Kaushalya <kaushalyabandaraatta@gmail.com>"
           ]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.103.1"
uvicorn = "^0.18.3"
psutil = "^5.7.3"
pandas = "^1.1.5"
loguru = "^0.5.3"
requests = "^2.25.1"
tqdm = "^4.66.1"
qdrant-client = {extras = ["fastembed"], version = "^1.6.3"}
flashrank = "~0.2.0" 
python-multipart= "~0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
